# Medical-APP

./: README.md  settings.gradle
app/: build.gradle.kts
app/OpenCV-android-sdk/samples/: build.gradle
app/OpenCV-android-sdk/sdk/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  yolo.cpp  yolo.h  yolov8ncnn.cpp
app/src/main/java/com/example/myapplication/inital/: MainActivity.java
app/src/main/java/com/example/myapplication/takephoto/: Camera2ApiActivity.java  Camera2ApiActivity1.java  YoloAPI.java  Yolov8Ncnn.java  photo_album.java
app/src/main/java/com/example/myapplication/tonguedetection/: UserInfo.java  UserInfo0.java  UserInfo1.java
app/src/main/java/com/example/myapplication/tonguereport/: DisplayPhotoActivity.java  External_PhotoGalleryActivity.java  PhotoAdapter.java  PhotoGalleryActivity.java  PhotoManager.java  UserInfo_photo.java  UserInfo_photo1.java
app/src/main/res/layout/: activity_camera2_api.xml  activity_display_photo.xml  activity_external_photo_gallery.xml  activity_main.xml  activity_photo_album.xml  activity_photo_gallery.xml  activity_userinfo.xml  activity_userinfo0.xml  activity_userinfo1.xml  activity_userinfo_photo.xml  activity_userinfo_photo1.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
